hphp/test/slow/namespace/dynamic_extra_slash_cns2.php.expectf
Warning: define() is deprecated and subject to removal from the Hack language in %s on line 4

Fatal error: Undefined constant 'A\B' in %s/test/slow/namespace/dynamic_extra_slash_cns2.php on line 9
